Added hello message
Added hello message

--- a/Default.cshtml
+++ b/Default.cshtml
@@ -7,10 +7,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>My Site's Title</title>
+        <title>My Site's Title1</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     </head>
     <body>
-        
+        <hr>Hello from VSO and Git, applying Webmatrix as editor</hr>
     </body>
 </html>
