--- a/Default.cshtml
+++ b/Default.cshtml
@@ -11,6 +11,6 @@
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     </head>
     <body>
-        <hr>Hello from VSO and Git, applying Webmatrix as editor</hr>
+        <hr>Hello from VSO and Git, applying Webmatrix as editor.</hr>
     </body>
 </html>
